--- a/config/application.properties
+++ b/config/application.properties
@@ -1,8 +1,9 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_hps?serverTimezone=UTC
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_hps?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
+
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.open-in-view=false
@@ -13,18 +14,21 @@ envers.audit_table_suffix=_audit_log
 #active mq
 activemq.url=tcp://localhost:61616
 #account setting
-app.type = O
+app.type = H
 account.compcode=0010010
-sync.date = 2021-10-01
+sync.date = 2022-05-13
 account.inpatient.code=CUS00001-001
 account.outpatient.code=CUS00001-006
+customer.account=1
+supplier.account=1
 upload.trader = false
+upload.doctor = 0
 upload.sale = true
-upload.purchase = true
-upload.retin = true
-upload.retout = true
-upload.opd = true
-upload.ot = true
-upload.dc = true
-upload.payment = true
-upload.expense = true
+upload.purchase = false
+upload.retin = false
+upload.retout = false
+upload.opd = 1
+upload.ot = false
+upload.dc = false
+upload.payment = 1
+upload.expense = false
