--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_hps?serverTimezone=LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_agape?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
 
@@ -14,21 +14,25 @@ envers.audit_table_suffix=_audit_log
 #active mq
 activemq.url=tcp://localhost:61616
 #account setting
-app.type = H
+app.type=H
 account.compcode=0010010
-sync.date = 2022-05-13
+account.department=006-0002
+sync.date=2021-08-06
 account.inpatient.code=CUS00001-001
 account.outpatient.code=CUS00001-006
 customer.account=1
 supplier.account=1
-upload.trader = false
-upload.doctor = 0
-upload.sale = true
-upload.purchase = false
-upload.retin = false
-upload.retout = false
-upload.opd = 1
-upload.ot = false
-upload.dc = false
-upload.payment = 1
-upload.expense = false
+upload.trader=1
+upload.doctor=0
+upload.sale=0
+upload.purchase=0
+upload.retin=0
+upload.retout=0
+upload.opd=0
+upload.ot=0
+upload.dc=1
+upload.payment=0
+upload.expense=0
+upload.opd.setup=0
+upload.ot.setup=0
+upload.dc.setup=0
