--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_agape?serverTimezone=LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_lts?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
 
@@ -17,12 +17,12 @@ activemq.url=tcp://localhost:61616
 app.type=H
 account.compcode=0010010
 account.department=006-0002
-sync.date=2021-08-06
+sync.date=2021-06-26
 account.inpatient.code=CUS00001-001
 account.outpatient.code=CUS00001-006
 customer.account=1
 supplier.account=1
-upload.trader=1
+upload.trader=0
 upload.doctor=0
 upload.sale=0
 upload.purchase=0
@@ -30,9 +30,10 @@ upload.retin=0
 upload.retout=0
 upload.opd=0
 upload.ot=0
-upload.dc=1
+upload.dc=0
 upload.payment=0
 upload.expense=0
+upload.bill =1
 upload.opd.setup=0
 upload.ot.setup=0
 upload.dc.setup=0
