--- a/config/application.properties
+++ b/config/application.properties
@@ -1,12 +1,13 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_lts?serverTimezone=LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_acmt?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
 
+#account.url=http://localhost:8077
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=false   
 hibernate.show_sql=false
 #hibernate.hbm2ddl.auto=create-drop
 # envers.X
@@ -31,9 +32,9 @@ upload.retout=0
 upload.opd=0
 upload.ot=0
 upload.dc=0
-upload.payment=0
+upload.payment=1
 upload.expense=0
-upload.bill =1
+upload.bill =0
 upload.opd.setup=0
 upload.ot.setup=0
 upload.dc.setup=0
