--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_acmt?serverTimezone=LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_kgsu?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
 
@@ -26,7 +26,7 @@ supplier.account=1
 upload.trader=0
 upload.doctor=0
 upload.sale=0
-upload.purchase=0
+upload.purchase=1
 upload.retin=0
 upload.retout=0
 upload.opd=0
