--- a/config/application.properties
+++ b/config/application.properties
@@ -1,32 +1,26 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_kgsu?serverTimezone=LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_wesley?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
 
-#account.url=http://localhost:8077
+user.url=http://localhost:8079
+account.url=http://localhost:8077
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.open-in-view=false   
-hibernate.show_sql=false
 #hibernate.hbm2ddl.auto=create-drop
 # envers.X
 envers.audit_table_suffix=_audit_log
-#active mq
-activemq.url=tcp://localhost:61616
 #account setting
 app.type=H
-account.compcode=0010010
+account.compcode=01
 account.department=006-0002
-sync.date=2021-06-26
-account.inpatient.code=CUS00001-001
-account.outpatient.code=CUS00001-006
-customer.account=1
-supplier.account=1
-upload.trader=0
-upload.doctor=0
-upload.sale=0
-upload.purchase=1
+sync.date=2023-01-10
+account.inpatient.code=001
+account.outpatient.code=002
+upload.trader=1
+upload.sale=1
+upload.purchase=0
 upload.retin=0
 upload.retout=0
 upload.opd=0
