--- a/pom.xml
+++ b/pom.xml
@@ -5,23 +5,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.4</version>
+        <version>2.7.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cv</groupId>
-    <artifactId>inventory-integration-service</artifactId>
+    <artifactId>core-hms-integration</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>inventory-integration-service</name>
-    <description>Stock Integration Service</description>
+    <name>core-hms-integration</name>
+    <description>Core HMS Integration Service</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <packaging>jar</packaging>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-activemq</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
