--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.myanmartools</groupId>
+            <artifactId>myanmar-tools</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
