--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_wl?serverTimezone=LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_sdm?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
 
@@ -13,23 +13,23 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 envers.audit_table_suffix=_audit_log
 #account setting
 app.type=H
-account.compcode=01
+account.compcode=0010010
 account.department=006-0002
 sync.date=2023-01-10
 account.inpatient.code=001
 account.outpatient.code=002
 upload.trader=0
-upload.sale=1
-upload.purchase=1
+upload.sale=
+upload.purchase=0
 upload.retin=0
 upload.retout=0
 upload.opd=1
 upload.ot=0
-upload.dc=1
+upload.dc=0
 upload.payment=1
 upload.expense=0
 upload.bill =0
 upload.opd.setup=1
 upload.ot.setup=1
 upload.dc.setup=0
-cash.only=1
+cash.only=0
