--- a/config/application.properties
+++ b/config/application.properties
@@ -19,8 +19,8 @@ sync.date=2023-01-10
 account.inpatient.code=001
 account.outpatient.code=002
 upload.trader=0
-upload.sale=
-upload.purchase=0
+upload.sale=0
+upload.purchase=1
 upload.retin=0
 upload.retout=0
 upload.opd=1
