--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_sdm?serverTimezone=LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/cv_inv_sdm1?serverTimezone=LOCAL
 jdbc.user=root
 jdbc.pass=corevalue
 
