--- a/config/application.properties
+++ b/config/application.properties
@@ -1,13 +1,11 @@
-# jdbc.X
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cv_inv_sdm1?serverTimezone=LOCAL
-jdbc.user=root
-jdbc.pass=corevalue
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_lts
+spring.datasource.username=root
+spring.datasource.password=corevalue
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.open-in-view = false
 user.url=http://localhost:8079
 account.url=http://localhost:8077
 # hibernate.X
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #hibernate.hbm2ddl.auto=create-drop
 # envers.X
 envers.audit_table_suffix=_audit_log
@@ -15,21 +13,21 @@ envers.audit_table_suffix=_audit_log
 app.type=H
 account.compcode=0010010
 account.department=006-0002
-sync.date=2023-01-10
+sync.date=2023-04-06
 account.inpatient.code=001
 account.outpatient.code=002
 upload.trader=0
-upload.sale=1
-upload.purchase=1
+upload.sale=0
+upload.purchase=0
 upload.retin=0
 upload.retout=0
-upload.opd=1
+upload.opd=0
 upload.ot=0
-upload.dc=0
-upload.payment=1
+upload.dc=1
+upload.payment=0
 upload.expense=0
 upload.bill =0
-upload.opd.setup=1
-upload.ot.setup=1
+upload.opd.setup=0
+upload.ot.setup=0
 upload.dc.setup=0
 cash.only=0
