--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://192.168.100.48:3306/cv_inv_sdm2
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_shinhom
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -16,12 +16,12 @@ account.department=006-0002
 sync.date=2023-04-01
 account.inpatient.code=CUS00001-008
 account.outpatient.code=CUS00001-001
-upload.trader=0
-upload.sale=0
-upload.purchase=0
-upload.retin=0
-upload.retout=0
-upload.opd=0
+upload.trader=1
+upload.sale=1
+upload.purchase=1
+upload.retin=1
+upload.retout=1
+upload.opd=1
 upload.ot=0
 upload.dc=0
 upload.payment=0
