--- a/config/application.properties
+++ b/config/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_kgswan
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_lts
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.open-in-view = false
 user.url=http://localhost:8079
 account.url=http://localhost:8077
+server.http2.enabled=true
 # hibernate.X
 #hibernate.hbm2ddl.auto=create-drop
 # envers.X
@@ -21,7 +22,7 @@ upload.sale=0
 upload.purchase=0
 upload.retin=0
 upload.retout=0
-upload.opd=0
+upload.opd=1
 upload.ot=0
 upload.dc=0
 upload.payment=0
