--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_lts
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_sdm
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -25,7 +25,7 @@ upload.retout=0
 upload.opd=1
 upload.ot=0
 upload.dc=0
-upload.payment=0
+upload.payment=1
 upload.expense=0
 upload.bill =0
 upload.opd.setup=1
