--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_sdm
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_lts2
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -14,7 +14,7 @@ envers.audit_table_suffix=_audit_log
 app.type=H
 account.compcode=0010010
 account.department=006-0002
-sync.date=2023-04-01
+sync.date=2021-10-01
 account.inpatient.code=CUS00001-008
 account.outpatient.code=CUS00001-001
 upload.trader=0
@@ -22,13 +22,13 @@ upload.sale=0
 upload.purchase=0
 upload.retin=0
 upload.retout=0
-upload.opd=1
+upload.opd=0
 upload.ot=0
-upload.dc=0
-upload.payment=1
+upload.dc=1
+upload.payment=0
 upload.expense=0
 upload.bill =0
-upload.opd.setup=1
+upload.opd.setup=0
 upload.ot.setup=0
 upload.dc.setup=0
 cash.only=0
