--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_lts2
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_mo
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -14,11 +14,11 @@ envers.audit_table_suffix=_audit_log
 app.type=H
 account.compcode=0010010
 account.department=006-0002
-sync.date=2021-10-01
-account.inpatient.code=CUS00001-008
-account.outpatient.code=CUS00001-001
+sync.date=2023-08-22
+account.inpatient.code=CUS00002-011
+account.outpatient.code=CUS00001-011
 upload.trader=0
-upload.sale=0
+upload.sale=1
 upload.purchase=0
 upload.retin=0
 upload.retout=0
