--- a/config/application.properties
+++ b/config/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_mo
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.open-in-view = false
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
 user.url=http://localhost:8079
 account.url=http://localhost:8077
 server.http2.enabled=true
