--- a/config/application.properties
+++ b/config/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_mo
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.open-in-view = false
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 user.url=http://localhost:8079
