--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_mo
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_ziwaka
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -14,9 +14,9 @@ server.http2.enabled=true
 envers.audit_table_suffix=_audit_log
 #account setting
 app.type=H
-account.compcode=0010010
+account.compcode=01
 account.department=006-0002
-sync.date=2023-08-22
+sync.date=2023-11-01
 account.inpatient.code=CUS00002-011
 account.outpatient.code=CUS00001-011
 upload.trader=0
@@ -24,9 +24,9 @@ upload.sale=1
 upload.purchase=0
 upload.retin=0
 upload.retout=0
-upload.opd=0
+upload.opd=1
 upload.ot=0
-upload.dc=1
+upload.dc=0
 upload.payment=0
 upload.expense=0
 upload.bill =0
