--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_ziwaka
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_shinhom
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -16,11 +16,11 @@ envers.audit_table_suffix=_audit_log
 app.type=H
 account.compcode=01
 account.department=006-0002
-sync.date=2023-11-03
+sync.date=2023-12-07
 account.inpatient.code=CUS00002-011
 account.outpatient.code=CUS00001-011
 upload.trader=0
-upload.sale=1
+upload.sale=0
 upload.purchase=0
 upload.retin=0
 upload.retout=0
