--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_wl
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_cttk
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -14,23 +14,23 @@ server.http2.enabled=true
 envers.audit_table_suffix=_audit_log
 #account setting
 app.type=H
-account.compcode=00001
+account.compcode=01
 account.department=006-0002
-sync.date=2024-01-19
+sync.date=2024-04-27
 account.inpatient.code=001
 account.outpatient.code=002
 upload.trader=0
-upload.sale=1
+upload.sale=0
 upload.purchase=0
 upload.retin=0
 upload.retout=0
 upload.opd=1
-upload.ot=1
-upload.dc=1
+upload.ot=0
+upload.dc=0
 upload.payment=0
 upload.expense=0
 upload.bill =0
 upload.opd.setup=0
 upload.ot.setup=0
 upload.dc.setup=0
-cash.only=1
+cash.only=0
