--- a/config/application.properties
+++ b/config/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_cttk
+spring.datasource.url=jdbc:mariadb://localhost:3306/cv_inv_acmt
 spring.datasource.username=root
 spring.datasource.password=corevalue
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.open-in-view = false
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
-user.url=http://localhost:8079
-account.url=http://localhost:8077
+user.url=https://localhost:8079
+account.url=https://localhost:8077
 server.http2.enabled=true
 # hibernate.X
 #hibernate.hbm2ddl.auto=create-drop
@@ -16,11 +16,11 @@ envers.audit_table_suffix=_audit_log
 app.type=H
 account.compcode=01
 account.department=006-0002
-sync.date=2024-04-27
+sync.date=2021-01-27
 account.inpatient.code=001
 account.outpatient.code=002
 upload.trader=0
-upload.sale=0
+upload.sale=1
 upload.purchase=0
 upload.retin=0
 upload.retout=0
